tests/lean/autoBoundPostponeLoop.lean.expected.out
autoBoundPostponeLoop.lean:5:12-5:13: error: unknown identifier 'h'
